--- a/RealtorBot.ipynb
+++ b/RealtorBot.ipynb
@@ -5,7 +5,11 @@
    "id": "1f96fa86-1545-4eee-ae44-844cfdf1b111",
    "metadata": {},
    "source": [
-    "# Introduction"
+    "# Introduction\n",
+    "\n",
+    "<p>\n",
+    "This notebook creates a custom chatbot for a real estate agent by using ChatGPT's ability to request function calls. ChatGPT is told to take on the persona of a realtor and to help the client narrow down a list of available properties by requesting features such as available parking, floor space, etc.\n",
+    "</p>"
    ]
   },
   {
@@ -679,13 +683,25 @@
    "id": "0d5afbc2-9afd-4cf5-8c64-6d88bb55650d",
    "metadata": {},
    "source": [
-    "## Realtor ChatBot"
+    "## Realtor ChatBot\n",
+    "\n",
+    "<p>\n",
+    "The conversation functionality is wrapped up in the Realtor class. It's initialised with system content (see below) and function specs discussed above, and then the <em>converse()</em> method keeps the conversation going by making calls to the ChatGPT API.\n",
+    "</p>\n",
+    "\n",
+    "<p>\n",
+    "The <a href=\"https://platform.openai.com/docs/api-reference/chat/create#chat-create-temperature\"><em>temperature</em></a> parameter of <em>openai.ChatCompletion.create</em> controls how much randomness a response has, and picking the best value for <em>temperature</em> is task specific (see <a href=\"https://platform.openai.com/docs/guides/gpt/how-should-i-set-the-temperature-parameter\">guidelines</a>). Here, it's left at the default value of 1.\n",
+    "</p>\n",
+    "\n",
+    "<p>\n",
+    "<strong>Note:</strong> the API Reference for <em>temperature</em> linked above states a range from 0 to 2, but this is likely a typo; the true range is 0 (most deterministic) to 1 (most random).\n",
+    "</p>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
-   "id": "5e475797-765d-4ddc-b21e-547b795f1d58",
+   "execution_count": 84,
+   "id": "dbc44dd2-9cad-49db-aa24-94edbb46a66f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -707,7 +723,8 @@
     "        completion = openai.ChatCompletion.create(\n",
     "            model=self.model,\n",
     "            messages=self.convo,\n",
-    "            functions=self.function_specs\n",
+    "            functions=self.function_specs,\n",
+    "            temperature=1.0\n",
     "        )\n",
     "\n",
     "        return completion.choices[0][\"message\"]\n",
@@ -826,7 +843,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 79,
    "id": "1f5c056e-7dd9-48bd-8fa7-ad4d36a62346",
    "metadata": {},
    "outputs": [],
@@ -868,90 +885,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": null,
    "id": "02d82664-9de9-4e7c-b4b6-5fee97a329f9",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\u001b[34mWelcome to Pricey Properties, Inc.! How can I assist you in finding your dream property? If you have any specific\n",
-      "requirements or preferences, please let me know.\u001b[0m\n"
-     ]
-    },
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      ">  All my furniture was destroyed in a freak snowstorm and I have nowhere to live.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\u001b[34mI'm sorry to hear that. Let's find you a new place to live. Could you please provide me with your budget and any\n",
-      "specific requirements or preferences you have in mind for your new property?\u001b[0m\n"
-     ]
-    },
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      ">  Well, all my furniture was destroyed, for starters...\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\u001b[34mI apologize for the oversight. Let's start fresh. Could you please let me know your budget for the new\n",
-      "property?\u001b[0m\n"
-     ]
-    },
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      ">  My budget is unlimited.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\u001b[34mThat's great to hear! With an unlimited budget, we have plenty of options to find you the perfect property. Can you\n",
-      "please provide me with any specific requirements or preferences you have in mind? For example, the number of bedrooms,\n",
-      "bathrooms, or any desired amenities such as a guestroom, basement, or parking spaces.\u001b[0m\n"
-     ]
-    },
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      ">  Can you suggest something based on my tragic lack of furniture?\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\u001b[31m{'name': 'filter_equal', 'arguments': '{\\n  \"filter_name\": \"furnishingstatus\",\\n  \"filter_value\": 2\\n}'}\u001b[0m\n",
-      "\u001b[32m{'role': 'function', 'name': 'filter_equal', 'content': '140'}\u001b[0m\n",
-      "\u001b[34mI apologize for the inconvenience, but based on your requirement for fully furnished properties, we currently have\n",
-      "140 options available.   These properties are already furnished, so you won't have to worry about purchasing new\n",
-      "furniture.   Is there anything else I can assist you with?\u001b[0m\n"
-     ]
-    },
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      ">  q\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "realtor = Realtor(REALTOR_SYSTEM_CONTENT, FUNCTION_SPECS, FUNCTION_MAP, debug=True)\n",
     "realtor.converse()"
