Annotate sample convos

--- a/RealtorBot.ipynb
+++ b/RealtorBot.ipynb
@@ -899,7 +899,11 @@
    "id": "31566201-1841-4350-bdf0-9bd10ce486d6",
    "metadata": {},
    "source": [
-    "# Sample Conversations"
+    "# Sample Conversations\n",
+    "\n",
+    "<p>\n",
+    "Let's look at some sample conversations. They all result from the same temperature and system content.\n",
+    "</p>"
    ]
   },
   {
@@ -908,8 +912,11 @@
    "metadata": {},
    "source": [
     "## Quick and Easy\n",
+    "<p>\n",
+    "In this, 3 pieces of information are stated together: mortgage approval for 5000000, 2 cars, and a guesthouse (which should, of course, be guestroom). ChatGPT understands that mortgage approval relates to price, 2 cars means 2 parking spaces required, and the typo of guesthouse is taken as a guestroom. It then requests function calls to filter for each of these in turn before replying that the list has been narrowed to 4 properties.\n",
+    "</p>\n",
     "\n",
-    "<img src=\"examples/quick_and_easy.png\" width=950/>"
+    "<p><img src=\"examples/quick_and_easy.png\" width=950/></p>"
    ]
   },
   {
@@ -919,7 +926,11 @@
    "source": [
     "## Long Way Round\n",
     "\n",
-    "<img src=\"examples/long_way_round.png\" width=950/>"
+    "<p>\n",
+    "With a similar input, changing <em>mortgage approval for</em> to <em>a mortgage for</em> (also bearing in mind that <em>temperature=1</em>), ChatGPT takes a different approach. It now carefully confirms each criterion in turn, eventually getting to the same result as the previous example. It also offers details of the properties, but unfortunately doesn't actually have any. In a production chatbot, the dataset would contain a sales description of the property.\n",
+    "</p>\n",
+    "\n",
+    "<p><img src=\"examples/long_way_round.png\" width=950/></p>"
    ]
   },
   {
@@ -929,10 +940,16 @@
    "source": [
     "## Changing a criterion\n",
     "### Good Result\n",
-    "<img src=\"examples/reset_good.png\" width=950/>\n",
+    "<p>\n",
+    "Here, ChatGPT first selects properties within budget, then correctly surmises that a basement is a good place to store wine. Unsatisfied with the selection, the customer increases the budget, and ChatGPT immediately resets the dataset and applies the updated budget criterion and reapplies the basement requirement.\n",
+    "</p>\n",
+    "<p><img src=\"examples/reset_good.png\" width=950/></p>\n",
     "\n",
     "### Bad Result\n",
-    "<img src=\"examples/reset_bad.png\" width=950/>"
+    "<p>\n",
+    "This time, instead of confidently saying <em>increase the budget</em>, the client meekly suggests <em>I can increase the budget</em>. ChatGPT doesn't reset the data, but tries to filter for the new higher budget, which of course leaves things unchanged. Asked if it actually performed the required task, ChatGPT tries the same filter again, sees that it still doesn't change anything, and now performs the reset and altered requirements.\n",
+    "</p>\n",
+    "<p><img src=\"examples/reset_bad.png\" width=950/></p>"
    ]
   },
   {
@@ -942,7 +959,10 @@
    "source": [
     "## Nonsensical Request\n",
     "\n",
-    "<img src=\"examples/no_wheels.png\" width=950/>"
+    "<p>\n",
+    "Asked for properties without wheels, ChatGPT filters for properties with exactly 1 story. Garbage in, garbage out.\n",
+    "</p>\n",
+    "<p><img src=\"examples/no_wheels.png\" width=950/></p>"
    ]
   },
   {
@@ -952,7 +972,10 @@
    "source": [
     "## Taking a Hint\n",
     "\n",
-    "<img src=\"examples/furniture_hints.png\" width=950/>"
+    "<p>\n",
+    "ChatGPT can make some connections, such as knowing a basement is a cool, dark place suitable for storing wine (see above), but here it's a little slower on the uptake. It offers condolences for the unfortunate loss of furniture, but requires more direct prompting before it searches for furnished properties.\n",
+    "</p>\n",
+    "<p><img src=\"examples/furniture_hints.png\" width=950/></p>"
    ]
   },
   {
@@ -962,7 +985,10 @@
    "source": [
     "## Code\n",
     "\n",
-    "<img src=\"examples/code.png\" width=950/>"
+    "<p>\n",
+    "This is the initial welcome message. A reminder to test your app and tune the temperature parameter and carefully test the system content.\n",
+    "</p>\n",
+    "<p><img src=\"examples/code.png\" width=950/></p>"
    ]
   },
   {
