--- a/RealtorBot.ipynb
+++ b/RealtorBot.ipynb
@@ -8,7 +8,7 @@
     "# Introduction\n",
     "\n",
     "<p>\n",
-    "This notebook creates a custom chatbot for a real estate agent by using ChatGPT's ability to request function calls. ChatGPT is told to take on the persona of a realtor and to help the client narrow down a list of available properties by requesting features such as available parking, floor space, etc.\n",
+    "This notebook creates a custom chatbot for a real estate agent by using OpenAI's <a href=\"https://platform.openai.com/docs/guides/gpt/chat-completions-api\">ChatCompletion</a> API and ChatGPT's ability to request <a href=\"https://platform.openai.com/docs/guides/gpt/function-calling\">function calls</a>. ChatGPT is told to take on the persona of a realtor and to help the client narrow down a list of available properties by requesting features such as available parking, floor space, etc.\n",
     "</p>"
    ]
   },
@@ -17,7 +17,11 @@
    "id": "66e26a69-42f7-4a22-aa79-3a0223f3c80f",
    "metadata": {},
    "source": [
-    "# Dependencies"
+    "# Dependencies\n",
+    "\n",
+    "<p>\n",
+    "If you experience issues running this notebook, install the following dependencies in a virtual environment.\n",
+    "</p>"
    ]
   },
   {
@@ -40,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 1,
    "id": "e11ae6ab-f8bb-4ffe-8bfa-7e94fdbf500e",
    "metadata": {},
    "outputs": [],
@@ -74,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "id": "b7dcb43a-84c1-4e6a-9e75-2a019afc90f6",
    "metadata": {},
    "outputs": [
@@ -235,7 +239,7 @@
        "4              no             yes        2       no        furnished  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -254,7 +258,7 @@
     "## Cleaning\n",
     "\n",
     "<p>\n",
-    "    Let's change each of the yes/no values to 1/0. This allows the same functions to filter those as well as the numerical values. Similarly, <em>furnishingstatus</em>, is changed to 0=unfurnished, 1=semi-furnished, and 2=fully furnished.\n",
+    "    Let's change each of the yes/no values to 1/0. This allows the same functions to filter those as well as the numerical values. Similarly, <em>furnishingstatus</em> is changed to 0=unfurnished, 1=semi-furnished, and 2=fully furnished.\n",
     "</p>\n",
     "\n",
     "<p>\n",
@@ -264,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "id": "c620cd6a-4d9f-4d47-a284-290f3e80ef59",
    "metadata": {},
    "outputs": [
@@ -432,7 +436,7 @@
        "4                 2  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -467,12 +471,15 @@
     "\n",
     "<p>\n",
     "    Here are 3 functions, <em><=</em>, <em>>=</em>, and <em>==</em>, to filter the dataset, and one to reset it back to its original state. The idea is that, for example, if a person says they are a two-car family, ChatGPT can select only properties where <em>parking >= 2</em>. Or, if a customer wants aircon, ChatGPT can request to filter by <em>airconditioning == 1</em>. If the customer isn't happy with the selection, ChatGPT can <em>reset</em> the dataset and reapply the filter.\n",
+    "</p>\n",
+    "<p>\n",
+    "<strong>Note:</strong> The functions all take <em>*args</em> as a parameter to obviate the need for the function call logic in Realtor to check which function is being called.\n",
     "</p>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "8d012fde-57a2-4580-a550-f87dbf7c60ce",
    "metadata": {},
    "outputs": [],
@@ -567,18 +574,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "b874027b-e16f-4312-83a7-bff112a63f57",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "API Key loaded\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "try:\n",
     "    openai.api_key = open(\"../api_key\", \"r\").read()\n",
@@ -607,7 +606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "2a5bcd62-e06e-46dc-ba9d-31ab079eed30",
    "metadata": {},
    "outputs": [],
@@ -700,7 +699,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": null,
    "id": "dbc44dd2-9cad-49db-aa24-94edbb46a66f",
    "metadata": {},
    "outputs": [],
@@ -834,7 +833,7 @@
     "## System Content\n",
     "\n",
     "<p>\n",
-    "This preamble gives ChatGPT context for the conversation. It can direct ChatGPT to adopt a persona, follow certain rules, etc. See more on this in the <a href=\"https://platform.openai.com/docs/guides/gpt/chat-completions-api\">docs</a>.\n",
+    "This preamble gives ChatGPT the context for the conversation. It can direct ChatGPT to adopt a persona, follow certain rules, etc. See more on this in the <a href=\"https://platform.openai.com/docs/guides/gpt/chat-completions-api\">docs</a>.\n",
     "</p>\n",
     "<p>\n",
     "    This one tells ChatGPT that it is to play the part of a realtor, and describes the dataset. ChatGPT's job is to help the customer to reduce the options to a manageable number.\n",
@@ -843,7 +842,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": null,
    "id": "1f5c056e-7dd9-48bd-8fa7-ad4d36a62346",
    "metadata": {},
    "outputs": [],
@@ -996,7 +995,21 @@
    "id": "39a2b7c3-c6ec-41f6-a250-0c826cca97b9",
    "metadata": {},
    "source": [
-    "# Conclusion"
+    "# Conclusion\n",
+    "\n",
+    "<p>\n",
+    "This notebook shows that it's quite simple to create a custom ChatGPT-based chatbot using your own business data. ChatGPT does all the heavy lifting of NLP, and the rest is fairly standard software engineering. The steps involved are:\n",
+    "    <ul>\n",
+    "    <li>Explore/clean the data</li>\n",
+    "    <li>Define the data manipulation functions</li>\n",
+    "    <li>Write function specs (although we can tell ChatGPT little white lies on the details)</li>\n",
+    "    <li>Create the system content, or context in which ChatGPT operates</li>\n",
+    "    <li>Iteratively call the ChatCompletion API, calling functions as requested and returning the result</li>\n",
+    "    </ul>\n",
+    "</p>\n",
+    "<p>\n",
+    "The above chatbot is very simple, and, as can be seen from the sample conversations, would not be put into production as is. However, the quick development time for such a prototype means that it's not beyond the resources of even small entities to implement their own chatbot.\n",
+    "</p>"
    ]
   }
  ],
